Add viteconfig changes

--- a/themes/aquila/src/blocks/accordion/editor.scss
+++ b/themes/aquila/src/blocks/accordion/editor.scss
@@ -4,7 +4,7 @@
  * Renders editor styles.
  */
 
-.one-novanta-accordion {
+.aquila-accordion {
 
 	&--has-background {
 		padding-inline: var(--wp--preset--spacing--20);
