Fix accordion styles

--- a/themes/aquila/src/components/accordion/index.scss
+++ b/themes/aquila/src/components/accordion/index.scss
@@ -2,8 +2,8 @@
  * Component: Accordion.
  */
 
-@use "../../../scss/variables";
-@use "~@rtcamp/web-components/build/accordion/style";
+@use "@/scss/variables";
+@use "@rtcamp/web-components/build/accordion/style";
 
 .wp-aquila-accordion {
 
