Add vite config information

--- a/themes/aquila/src/components/tile-carousel/index.scss
+++ b/themes/aquila/src/components/tile-carousel/index.scss
@@ -2,8 +2,8 @@
  * Component: Title Carousel.
  */
 
-@use "../../../scss/variables";
-@use "~@rtcamp/web-components/build/slider/style";
+@use "@/scss/variables";
+@use "@rtcamp/web-components/build/slider/style";
 
 .tile-carousel {
 	$self: &;
